src/objects/loan__Bank__c.object
<CustomObject>
    <fields>
        <fullName>loan__ACH_Code__c</fullName>
        <label>Bank&apos;s ACH Code</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>loan__ACH_Format__c</fullName>
        <label>ACH Format</label>
        <picklist>
            <picklistValues>
                <fullName>NACHA</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Account_Name__c</fullName>
        <inlineHelpText>An identifier for the bank account. Example: Tax Withholding or Fees Income.</inlineHelpText>
        <label>Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Account_Number__c</fullName>
        <label>Account Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Bank_Code__c</fullName>
        <label>Bank Code</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>loan__Bank_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Location</label>
        <referenceTo>loan__Branch_Location__c</referenceTo>
        <relationshipLabel>Banks</relationshipLabel>
        <relationshipName>Banks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Routing_Number__c</fullName>
        <label>Routing Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Short_Name__c</fullName>
        <label>Bank Short Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan_ffa__FFA_Bank_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FFA Bank Account</label>
        <referenceTo>c2g__codaBankAccount__c</referenceTo>
        <relationshipLabel>Banks</relationshipLabel>
        <relationshipName>Banks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Bank</label>
    <nameField>
        <label>Bank Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Banks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>